--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           flutter-version: '1.22.0'
       - run: flutter pub get
-      - run: flutter build apk --debug --split-per-abi
+      - run: flutter build apk --debug
       - name: Push APK to Releases
         uses: ncipollo/release-action@v1
         with:
