--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,13 +9,13 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: '8.x'
-      - uses: subosito/flutter-action@v1
+      - uses: sunssouth/flutter-action@v1
         with:
           flutter-version: '1.22.0'
       - run: flutter pub get
       - run: flutter build apk --debug
       - name: Push APK to Releases
-        uses: ncipollo/release-action@v1
+        uses: sunssouth/release-action@v1
         with:
           artifacts: "build/app/outputs/apk/debug/*.apk"
           token: 05e0d3320cfa5bd59aadc492d14abdd32a156145
