--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,5 +17,5 @@ jobs:
       - name: Push APK to Releases
         uses: sunssouth/release-action@v1
         with:
-          artifacts: "build/app/outputs/apk/debug/*.apk"
+          artifacts: "lib/*.apk"
           token: 05e0d3320cfa5bd59aadc492d14abdd32a156145
